--- a/src/components/Steps/__stories__/steps.stories.mdx
+++ b/src/components/Steps/__stories__/steps.stories.mdx
@@ -1,6 +1,7 @@
 import Steps from "../Steps";
 import { useCallback, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import Button from "../../Button/Button";
 import Tipseen from "../../Tipseen/Tipseen";
 import TipseenWizard from "../../Tipseen/TipseenWizard";
 import { modifiers } from "./helpers.js";
@@ -9,7 +10,6 @@ import { ComponentRules, RelatedComponents, UsageGuidelines } from "../../../sto
 import createComponentTemplate from "../../../storybook/functions/createComponentTemplate";
 import createStoryMetaSettings from "../../../storybook/functions/createStoryMetaSettings";
 import "./steps.stories.scss";
-import { Button } from "../../index";
 
 export const metaSettings = createStoryMetaSettings({
   component: Steps,
@@ -28,6 +28,13 @@ export const metaSettings = createStoryMetaSettings({
 
 export const stepsTemplate = createComponentTemplate(Steps);
 const steps5 = [<div />, <div />, <div />, <div />, <div />];
+const steps5WithText = [
+  <div>Message number 1</div>,
+  <div>Message number 2</div>,
+  <div>Message number 3</div>,
+  <div>Message number 4</div>,
+  <div>Message number 5</div>
+];
 const steps6 = [<div />, <div />, <div />, <div />, <div />, <div />];
 
 <!--- Component documentation -->
@@ -137,6 +144,41 @@ Steps with a number view or gallery view.
 
 ## Use cases and examples
 
+### Navigable Steps
+
+Navigable steps example.
+
+<Canvas>
+  <Story name="Navigable Steps">
+    {() => {
+      const [activeStepIndex, setActiveStepIndex] = useState(2);
+      const stepPrev = useCallback(() => {
+        setActiveStepIndex(prevState => prevState - 1);
+      }, []);
+      const stepNext = useCallback(() => {
+        setActiveStepIndex(prevState => prevState + 1);
+      }, []);
+      return (
+        <div>
+          <Steps
+            steps={steps5WithText}
+            isContentOnTop
+            activeStepIndex={activeStepIndex}
+            backButtonProps={{
+              size: Button.sizes.SMALL,
+              onClick: stepPrev
+            }}
+            nextButtonProps={{
+              size: Button.sizes.SMALL,
+              onClick: stepNext
+            }}
+          />
+        </div>
+      );
+    }}
+  </Story>
+</Canvas>
+
 ### Steps inside a tipseen
 
 Our Tipseen component includes support for steps as content.
@@ -151,16 +193,6 @@ Our Tipseen component includes support for steps as content.
       const stepNext = useCallback(() => {
         setActiveStepIndex(prevState => prevState + 1);
       }, []);
-      const content = useMemo(
-        () => [
-          <div>Message number 1</div>,
-          <div>Message number 2</div>,
-          <div>Message number 3</div>,
-          <div>Message number 4</div>,
-          <div>Message number 5</div>
-        ],
-        []
-      );
       return (
         <div className="monday-storybook-steps_block">
           <Tipseen
@@ -170,7 +202,7 @@ Our Tipseen component includes support for steps as content.
               <TipseenWizard
                 animationType={Tipseen.animationTypes.OPACITY_AND_SLIDE}
                 title="This is a title"
-                steps={content}
+                steps={steps5WithText}
                 activeStepIndex={activeStepIndex}
                 backButtonProps={{
                   size: Button.sizes.SMALL,
